# kernel-anvil

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: decode-pipeline-breakdown.md  llama-cpp-kernel-analysis.md  vulkan-vs-rocm-analysis.md
docs/superpowers/plans/: 2026-03-29-smithy-phase1.md
docs/superpowers/specs/: 2026-03-29-smithy-design.md
examples/: qwen3_8b_gemv.py  simple_gemv.py
kernel_anvil/: __init__.py  __main__.py  analyze.py  autoforge.py  cli.py  codegen.py  gguf.py  hip_codegen.py  kernels.py  llama_sweep.py  model.py  profile.py  rdna3.py  sweep.py  verify.py  vulkan_sweep.py
patches/: README.md  apply.sh  mmvq-smithy.patch  smithy-config.h
tests/: test_analyze.py  test_cli.py  test_codegen.py  test_gguf.py  test_gguf_optimize.py  test_model.py  test_profile.py  test_rdna3.py  test_sweep.py  test_verify.py
