[build-system]
requires = ["setuptools>=60.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kernel-anvil"
version = "0.1.0"
description = "Profile-guided GPU kernel optimizer for AMD/RDNA3. Auto-tunes llama.cpp MMVQ kernels per model shape."
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "triton>=3.0",
    "rich>=13.0",
    "gguf>=0.6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
kernel-anvil = "kernel_anvil.cli:main"

[tool.setuptools.packages.find]
include = ["kernel_anvil*"]
